--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,43 +1,26 @@
 version: 0.2
 
-env:
-  variables:
-    CHROME_BIN: "/usr/bin/chromium-browser"
-
 phases:
   install:
     commands:
-      - echo Entered the install phase...
-      - apt-get update -y
-      - apt-get install apt-transport-https
-      # Setup for Yarn
+      - echo Installing Node 12...
+      - curl -sL https://deb.nodesource.com/setup_12.x | bash -
+      - apt install -y nodejs
+      - echo Installing Yarn...
       - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
       - echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
-      # Setup for Chrome
-      - apt-get install -y software-properties-common
-      - add-apt-repository -y ppa:canonical-chromium-builds/stage
-      # Do it!
-      - apt-get update -y
-      - apt-get install -y chromium-browser 
-      - apt-get install -y yarn
+      - apt install --no-install-recommends yarn
   pre_build:
     commands:
-      - echo Entered the pre_build phase...
-      - yarn install
+      - echo Installing dependencies...
+      - yarn
   build:
     commands:
-      - echo Entered the build phase...
-	  - yarn run lint
-      - yarn run test
-      - yarn run build
-  post_build:
-    commands:
-      - echo Entered the post_build phase...
-      - cp index.html dist/index.html
-      - cp -R static dist/static
-      - echo Build completed on `date`
+      - echo Testing...
+      - echo Building...
+      - yarn build
 artifacts:
   files:
-    - '**/*'
+    - "**/*"
   discard-paths: no
   base-directory: dist
