--- a/appspec.yml
+++ b/appspec.yml
@@ -2,11 +2,13 @@ version: 0.0
 os: linux
 files:
    - source: /
-     destination: /home/ec2-user/django/django-app
+     destination: /var/www/html
 file_exists_behavior: OVERWRITE     
-
-hooks:
-  BeforeInstall:
-      - location: scripts/before_install.sh
-  AfterInstall:
-      - location: scripts/after_install.sh
+permissions:
+   - object: /var/www/html
+     pattern: "**"
+     owner: root
+     group: root
+     mode: 755
+     type:
+       - file
